--- a/crud-with-rest-api/package.json
+++ b/crud-with-rest-api/package.json
@@ -5,6 +5,7 @@
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "mysql2": "^3.14.0",
+    "sequelize": "^6.37.6",
     "sqlite3": "^5.1.7"
   },
   "name": "crud-with-sqlite",
