--- a/crud-with-rest-api/rest_api_with_mysql/.env.example
+++ b/crud-with-rest-api/rest_api_with_mysql/.env.example
@@ -1,7 +1,7 @@
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_NAME=laravel
+DB_NAME=databse
 DB_USER=root
-DB_PASSWORD=Toor@8622
+DB_PASSWORD=your_password
 
 SERVER_PORT=3000
